--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "axios": "^1.5.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "lucide-react": "^0.279.0",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0"
